--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,10 @@
+body {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  
+}
+
 .my_musicPlayer {
   display: flex;
   align-items: center;
