--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,7 @@
 body {
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .my_musicPlayer {
@@ -14,37 +16,91 @@ body {
   align-items: center;
   width: 100%;
 }
-.my_musicPlayer .left_box .profile img {
+.my_musicPlayer .left_box .box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.3294117647);
+  padding: 11% 10% 10% 10%;
+}
+.my_musicPlayer .left_box .box .animation {
+  display: none;
+  overflow: visible;
+  height: 70px;
+  position: absolute;
+  top: 150px;
+}
+.my_musicPlayer .left_box .box .animation .loader {
+  height: 70px;
+  display: flex;
+  align-items: center;
+  border-radius: 50%;
+}
+.my_musicPlayer .left_box .box .animation .loader .stroke {
+  display: block;
+  position: relative;
+  background: #f1f1f1;
+  height: 100%;
+  width: 10px;
+  border-radius: 50px;
+  margin: 10px;
+  animation: animate 1.2s linear infinite;
+}
+.my_musicPlayer .left_box .box .animation .loader .stroke:nth-child(1) {
+  animation-delay: 0s;
+}
+.my_musicPlayer .left_box .box .animation .loader .stroke:nth-child(2) {
+  animation-delay: 0.3s;
+}
+.my_musicPlayer .left_box .box .animation .loader .stroke:nth-child(3) {
+  animation-delay: 0.6s;
+}
+.my_musicPlayer .left_box .box .animation .loader .stroke:nth-child(4) {
+  animation-delay: 0.9s;
+}
+.my_musicPlayer .left_box .box .animation .loader .stroke:nth-child(5) {
+  animation-delay: 0.6s;
+}
+.my_musicPlayer .left_box .box .animation .loader .stroke:nth-child(6) {
+  animation-delay: 0.3s;
+}
+.my_musicPlayer .left_box .box .animation .loader .stroke:nth-child(7) {
+  animation-delay: 0.1s;
+}
+.my_musicPlayer .left_box .box .animation img {
   width: 200px;
   height: 200px;
   border-radius: 50%;
 }
-.my_musicPlayer .left_box .info {
+.my_musicPlayer .left_box .box .info {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
 }
-.my_musicPlayer .left_box .info h3 {
+.my_musicPlayer .left_box .box .info h3 {
   font-size: 32px;
   margin-bottom: 0;
 }
-.my_musicPlayer .left_box .info p {
+.my_musicPlayer .left_box .box .info p {
   font-size: 25px;
   font-weight: 600;
 }
-.my_musicPlayer .left_box .function {
+.my_musicPlayer .left_box .box .function {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.my_musicPlayer .left_box .stock {
+.my_musicPlayer .left_box .box .function .stock {
   display: flex;
 }
-.my_musicPlayer .left_box .sound {
+.my_musicPlayer .left_box .box .function .sound {
   display: flex;
+  align-items: center;
+  gap: 5px;
 }
-.my_musicPlayer .left_box .controls {
+.my_musicPlayer .left_box .box .function .controls {
   margin-top: 25px;
   display: flex;
   flex-direction: row;
@@ -52,8 +108,17 @@ body {
   align-items: center;
   gap: 20px;
 }
-.my_musicPlayer .left_box .controls button {
+.my_musicPlayer .left_box .box .function .controls button {
   width: 50px;
   height: 50px;
   border-radius: 50%;
+}
+
+@keyframes animate {
+  50% {
+    height: 20%;
+  }
+  100% {
+    height: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
