--- a/style/style.scss
+++ b/style/style.scss
@@ -1,71 +1,140 @@
- body{
-  background-repeat: no-repeat
- }
+body {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
 .my_musicPlayer {
-    display: flex;   
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 95vh;
+  
+
+  .left_box {
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    width: 100%;
+  .box{
+    display:flex;
+    flex-direction: column;
     justify-content:center;
-    height: 95vh;
-    .left_box {
+    align-items: center;
+    background-color: #ffffff54;
+    padding:  11% 10% 10% 10%;
+    
+
+    .animation {
+       display: none;
+      overflow: visible;
+      height: 70px;
+      position: absolute;
+      top: 150px;
+      .loader {
+        // Define styles for your loader here
+        height: 70px;
+        display: flex;
+        align-items: center;
+        border-radius: 50%;
+
+        .stroke {
+          display: block;
+          position: relative;
+          background: #f1f1f1;
+          height: 100%;
+          width: 10px;
+          border-radius: 50px;
+          margin: 10px;
+          animation: animate 1.2s linear infinite;
+
+          &:nth-child(1) {
+            animation-delay: 0s;
+          }
+          &:nth-child(2) {
+            animation-delay: 0.3s;
+          }
+          &:nth-child(3) {
+            animation-delay: 0.6s;
+          }
+          &:nth-child(4) {
+            animation-delay: 0.9s;
+          }
+          &:nth-child(5) {
+            animation-delay: 0.6s;
+          }
+          &:nth-child(6) {
+            animation-delay: 0.3s;
+          }
+          &:nth-child(7) {
+            animation-delay: 0.1s;
+          }
+        }
+      }
+
+      img {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+      }
+    }
+
+    .info {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+
+      h3 {
+        font-size: 32px;
+        margin-bottom: 0;
+      }
+      p {
+        font-size: 25px;
+        font-weight: 600;
+      }
+    }
+
+    .function {
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 100%; 
-      
-      .profile {
 
-        img{
-         width: 200px;
-         height: 200px;
-         border-radius: 50%;
-       }
-      }
-      .info{
-        display:flex;
-        justify-content:center;
-        flex-direction: column;
-        align-items: center;
-        h3{
-          font-size:32px;
-          margin-bottom: 0;
-        }
-        p{
-          font-size:25px;
-          font-weight:600;
-        }
-
-      }
-      
-      .function {
+      .stock {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        
-        }
-        .stock{
-         display: flex;
-        } 
-        .sound{
-          display: flex;
-        }
-        .controls{
-          margin-top: 25px;
-          display: flex;
-          flex-direction: row;
-          justify-content: center;
-          align-items: center;
-          gap: 20px;
-             button{
-             width: 50px;
-             height: 50px;
-             border-radius: 50%;
-            }
-
       }
-      
+      .sound  {
+        display: flex;
+        align-items: center;
+        gap:5px
+      }
+      .controls {
+        margin-top: 25px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+
+        button {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+        }
+      }
     }
-    
-    
   }
-  
+
+  }
+}
+
+
+
+@keyframes  animate {
+  50% {
+    height: 20%;
+  }
+  100% {
+    height: 100%;
+  }
+}
