--- a/style/style.css
+++ b/style/style.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  width: 90%;
 }
 .my_musicPlayer .left_box .box {
   display: flex;
@@ -23,6 +23,7 @@ body {
   align-items: center;
   background-color: rgba(255, 255, 255, 0.3294117647);
   padding: 11% 10% 10% 10%;
+  border-radius: 15px;
 }
 .my_musicPlayer .left_box .box .animation {
   display: none;
@@ -44,7 +45,7 @@ body {
   height: 100%;
   width: 10px;
   border-radius: 50px;
-  margin: 10px;
+  margin: 7px;
   animation: animate 1.2s linear infinite;
 }
 .my_musicPlayer .left_box .box .animation .loader .stroke:nth-child(1) {
@@ -112,6 +113,41 @@ body {
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  background-color: #fff;
+  border: 2px solid #08920a;
+}
+.my_musicPlayer .left_box .box .function .controls button::before {
+  color: #05a908;
+}
+.my_musicPlayer .right_box {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.3294117647);
+  border-radius: 15px;
+}
+.my_musicPlayer .right_box .music_list {
+  width: 90%;
+}
+.my_musicPlayer .right_box .music_list ul li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  gap: 20px;
+}
+.my_musicPlayer .right_box .music_list ul li button {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+}
+.my_musicPlayer .right_box .music_list ul li .info {
+  display: flex;
+  width: 250px;
+  justify-content: space-between;
+  gap: 10px;
 }
 
 @keyframes animate {
