--- a/style/style.css
+++ b/style/style.css
@@ -7,21 +7,24 @@ body {
 .my_musicPlayer {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   height: 95vh;
 }
 .my_musicPlayer .left_box {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 90%;
+  justify-content: center;
+  width: 500px;
+  height: 700px;
 }
 .my_musicPlayer .left_box .box {
+  width: 90%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.3294117647);
+  background-color: rgba(255, 255, 255, 0.4588235294);
   padding: 11% 10% 10% 10%;
   border-radius: 15px;
 }
@@ -120,12 +123,12 @@ body {
   color: #05a908;
 }
 .my_musicPlayer .right_box {
-  width: 45%;
+  width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.3294117647);
+  background-color: rgba(255, 255, 255, 0.4588235294);
   border-radius: 15px;
 }
 .my_musicPlayer .right_box .music_list {
