--- a/style/style.css
+++ b/style/style.css
@@ -2,13 +2,14 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  color: #08680b;
 }
 
 .my_musicPlayer {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  height: 95vh;
+  height: 100vh;
 }
 .my_musicPlayer .left_box {
   display: flex;
@@ -16,10 +17,11 @@ body {
   align-items: center;
   justify-content: center;
   width: 500px;
-  height: 700px;
+  height: 400px;
 }
 .my_musicPlayer .left_box .box {
   width: 90%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -33,7 +35,7 @@ body {
   overflow: visible;
   height: 70px;
   position: absolute;
-  top: 150px;
+  top: 180px;
 }
 .my_musicPlayer .left_box .box .animation .loader {
   height: 70px;
@@ -98,6 +100,8 @@ body {
 }
 .my_musicPlayer .left_box .box .function .stock {
   display: flex;
+  align-items: center;
+  margin: 15px;
 }
 .my_musicPlayer .left_box .box .function .sound {
   display: flex;
@@ -110,7 +114,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 14px;
 }
 .my_musicPlayer .left_box .box .function .controls button {
   width: 50px;
@@ -123,16 +127,22 @@ body {
   color: #05a908;
 }
 .my_musicPlayer .right_box {
-  width: 500px;
+  width: 400px;
+  height: 400px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.4588235294);
+  background-color: rgba(255, 255, 255, 0.655);
+  overflow-y: scroll;
   border-radius: 15px;
 }
-.my_musicPlayer .right_box .music_list {
-  width: 90%;
+.my_musicPlayer .right_box::-webkit-scrollbar {
+  width: 0;
+}
+.my_musicPlayer .right_box .music_list ul {
+  padding: 15px 0;
+  margin-top: 120px;
 }
 .my_musicPlayer .right_box .music_list ul li {
   display: flex;
@@ -145,12 +155,25 @@ body {
   width: 45px;
   height: 45px;
   border-radius: 50%;
+  color: #08680b;
+  border: 1px solid #08680b;
 }
 .my_musicPlayer .right_box .music_list ul li .info {
   display: flex;
   width: 250px;
   justify-content: space-between;
-  gap: 10px;
+}
+.my_musicPlayer .right_box .music_list ul li .info p {
+  text-align: end;
+}
+.my_musicPlayer .openList {
+  position: absolute;
+  top: 10%;
+  right: 10%;
+  display: none;
+}
+.my_musicPlayer .openList i {
+  color: #0d4605;
 }
 
 @keyframes animate {
@@ -160,4 +183,104 @@ body {
   100% {
     height: 100%;
   }
+}
+@media (max-width: 1024px) {
+  .my_musicPlayer .right_box {
+    display: none;
+    top: 5%;
+  }
+  .my_musicPlayer .right_box .music_list ul {
+    margin-top: 0;
+  }
+  .my_musicPlayer .openList {
+    display: block;
+  }
+  .my_musicPlayer .left_box {
+    width: 80%;
+    height: 90%;
+  }
+  .my_musicPlayer .left_box .info {
+    display: none;
+  }
+  .my_musicPlayer .left_box .box {
+    justify-content: end;
+  }
+  .my_musicPlayer .showList {
+    display: block;
+    position: absolute;
+    height: 45%;
+    width: 75%;
+    margin: 0;
+    padding: 20px;
+    top: 7%;
+    background-color: #f1f1f1;
+  }
+}
+#stock, #volume {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  width: 100%;
+  cursor: pointer;
+  outline: none;
+  border-radius: 15px;
+  height: 20px;
+  height: 6px;
+  background: #ccc;
+}
+
+#stock::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 30px;
+  width: 30px;
+  background: transparent;
+  background-image: url("/image/music.png");
+  background-size: cover;
+  border-radius: 50%;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+  transform: rotateZ(var(--thumb-rotate, 0deg));
+}
+
+/* Thumb: Firefox */
+#stock::-moz-range-thumb {
+  height: 30px;
+  width: 30px;
+  background: transparent;
+  background-image: url("/image/music.png");
+  background-size: cover;
+  border: none;
+  border-radius: 50%;
+  transform: rotateZ(var(--thumb-rotate, 0deg));
+  -moz-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+}
+
+#volume::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 25px;
+  width: 25px;
+  background: transparent;
+  background-image: url("/image/wave.jpg");
+  background-size: cover;
+  border-radius: 50%;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+  transform: rotateZ(var(--thumb-rotate, 0deg));
+}
+
+/* Thumb: Firefox */
+#volume::-moz-range-thumb {
+  height: 30px;
+  width: 30px;
+  background: transparent;
+  background-image: url("/image/wave.jpg");
+  background-size: cover;
+  border: none;
+  border-radius: 50%;
+  transform: rotateZ(var(--thumb-rotate, 0deg));
+  -moz-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
 }/*# sourceMappingURL=style.css.map */
