--- a/style/style.css
+++ b/style/style.css
@@ -116,6 +116,12 @@ body {
   align-items: center;
   gap: 14px;
 }
+.my_musicPlayer .left_box .box .function .controls .active::before {
+  color: #fff;
+}
+.my_musicPlayer .left_box .box .function .controls .active {
+  background-color: #05a908;
+}
 .my_musicPlayer .left_box .box .function .controls button {
   width: 50px;
   height: 50px;
@@ -141,15 +147,26 @@ body {
   width: 0;
 }
 .my_musicPlayer .right_box .music_list ul {
-  padding: 15px 0;
-  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin-top: 200px;
+}
+.my_musicPlayer .right_box .music_list ul .active {
+  background-color: #05a908;
+  color: #fff;
 }
 .my_musicPlayer .right_box .music_list ul li {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  gap: 20px;
+  margin-top: 10px;
+  padding: 0 15px;
+  border-radius: 20px;
+  background-color: #c8c2c2;
 }
 .my_musicPlayer .right_box .music_list ul li button {
   width: 45px;
@@ -169,7 +186,7 @@ body {
 .my_musicPlayer .openList {
   position: absolute;
   top: 10%;
-  right: 10%;
+  right: 13%;
   display: none;
 }
 .my_musicPlayer .openList i {
